<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="@dimen/image"
        android:layout_height="@dimen/image"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/imv_dia"
        android:contentDescription="@string/todo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_size">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_dia_name"
            android:text="@string/d_a"
            android:layout_marginBottom="@dimen/text_size"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_hora"
            android:text="@string/hora"
            android:layout_marginBottom="@dimen/text_size"
            />
    </LinearLayout>

</LinearLayout>